tests/NormalTests/paczka1/fuzzy1/23251396.err
Error in line 1: zDr8NZwlWv A347 93,5
Error in line 17: 5KD A347 26,2
Error in line 10: hpK A546 10,1
Error in line 33: A347 A546 -1,7
Error in line 34: 5KD A347 41,5
